--- a/material-symbols.css
+++ b/material-symbols.css
@@ -34,6 +34,7 @@
   white-space: nowrap;
   word-wrap: normal;
   direction: ltr;
+  vertical-align: -0.16em;
   -webkit-font-feature-settings: 'liga';
   -webkit-font-smoothing: antialiased;
 }
